logs/Slang/generated/keywords/5.6.2--keyword_release.sv.log
name: release
description: The 'release' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_release.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_release.sv:8:8: error: expected declarator
    bit release;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_release.sv:8:9: error: expected member
    bit release;
        ^~~~~~~
